# wiki

./: .cruft.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  README.md  codecov.yaml  install.sh  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: build.yaml  docs.yaml  lint.yaml  tests.yaml
docs/: api.rst  conf.py  configuration.rst  examples.rst  going-further.rst  index.rst  recipes.rst  reference.rst  skill.rst  wiki.cli.cmd.rst  wiki.cli.rst  wiki.core.rst  wiki.rst  wiki.util.rst
docs/_static/: custom.css
docs/cli/: index.rst
docs/guide/: generation.rst  getting-started.rst  index.rst  merge-driver.rst  obsidian.rst  pages.rst  structure.rst
examples/: README.md
examples/hello/: _index.md  world.md
examples/hello/.wiki/: settings.json
tests/: __init__.py  conftest.py  test_constants.py  test_env_hermeticity.py  test_import.py  test_repo_hygiene.py  test_typing.py
tests/test_cli/: __init__.py  conftest.py  test_main.py  test_regressions.py  test_utils.py  test_wiki.py  test_wiki_commands.py
tests/test_cli/test_cmd/: __init__.py
tests/test_core/: __init__.py  _helpers.py  conftest.py  test__obsidian.py  test_authoring.py  test_config.py  test_event.py  test_format.py  test_lint.py  test_map.py  test_obsidian.py  test_plan.py  test_read.py  test_search.py  test_update.py  test_wiki.py
tests/test_impl/: __init__.py  test_obsidian.py
tests/test_util/: __init__.py  test_dict.py  test_filesystem.py  test_markdown.py  test_str.py
wiki/: __init__.py  constants.py  exceptions.py  typing.py
wiki/_assets/git/: merge_index.sh
wiki/_assets/obsidian/plugins/obsidian-front-matter-title-plugin/: data.json
wiki/_config/git/: merge_index.sh
wiki/cli/: __init__.py  main.py  utils.py
wiki/cli/cmd/: __init__.py  wiki.py
wiki/core/: __init__.py  _obsidian.py  event.py  format.py  obsidian.py  wiki.py
wiki/impl/: __init__.py
wiki/skills/wiki/: SKILL.md
wiki/util/: __init__.py  dict.py  filesystem.py  markdown.py  str.py
